# All-my-rust-code-thus-far

./: README.md  new.txt  text.txt
Encoding/data_encoding/: Cargo.toml
Encoding/data_encoding/src/: lib.rs  main.rs
Error_HANDLING/error_handling_101/: Cargo.toml
Error_HANDLING/error_handling_101/src/: main.rs
Exploring_Macros/line/: Cargo.toml
Exploring_Macros/line/src/: line.rs  main.rs
Iterators/iterator_intoiterator/: Cargo.toml
Iterators/iterator_intoiterator/src/: main.rs
Machine Learning/rustymachine-regression/: Cargo.toml
Machine Learning/rustymachine-regression/src/: main.rs
Tokio/hello_world_1/: Cargo.toml
async_await_echo/: Cargo.toml
async_await_echo/src/: main.rs
async_await_webcrawler_surf_async_std/: Cargo.toml
async_await_webcrawler_surf_async_std/src/: main.rs
closures_101/: Cargo.toml
closures_101/src/: main.rs
from_into_trait/: Cargo.toml
from_into_trait/src/: main.rs
maths/: Cargo.toml
maths/src/: main.rs
options_and_result_types/: Cargo.toml
options_and_result_types/src/: main.rs
partition_fxn_example/: Cargo.toml
partition_fxn_example/src/: main.rs
random_walk_ggez/: Cargo.toml
random_walk_ggez/src/: main.rs
read_lines/: Cargo.toml
read_lines/src/: main.rs
redis-cli/: Cargo.toml
redis-cli/src/: main.rs
ref_count_cons_example/: Cargo.toml
ref_count_cons_example/src/: main.rs
struct_enum_example/: Cargo.toml
struct_enum_example/src/: main.rs
trial_code_snippets/: Cargo.toml
trial_code_snippets/src/: main.rs
utility_traits/: Cargo.toml
utility_traits/src/: main.rs
(+1 files in other folders)
